--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-auth": "^3.20.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/jit": "^0.1.18",
     "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
-    "tailwindcss": "^2.1.1"
+    "postcss": "^8.2.14",
+    "tailwindcss": "^2.1.2"
   }
 }
